--- a/DEMOS/Create and Query Notebook.ipynb
+++ b/DEMOS/Create and Query Notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,13 +21,14 @@
     "\n",
     "\n",
     "ENV = {\n",
-    "    \"HOST\" : \"https://training4.routegenie.com:8000/\",\n",
+    "    \"HOST\" : \"https://your-subdomain.routegenie.com:8000/\",\n",
     "    \"SECRET\" : \"\",\n",
     "    \"CLIENTID\" : \"\"\n",
     "}\n",
     "\n",
     "    \n",
-    "TESTID = \"\"\n",
+    "TESTID = \"OtherPayerTest002\"\n",
+    "\n",
     "\n",
     "PAYMENT_METHOD = {\n",
     "    0 : 'Account',\n",
@@ -47,7 +48,6 @@
     "\"\"\"Authentication and Create Order POST request test.\"\"\"\n",
     "\n",
     "import requests\n",
-    "import json\n",
     "import base64\n",
     "from pprint import pprint\n",
     "\n",
@@ -109,6 +109,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Get Payers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/usr/bin/env python\n",
+    "# -*- coding: utf-8 -*-\n",
+    "\n",
+    "### Salvatore L Greco <salvatore@isi-technology.com>\n",
+    "### ISI Technology/RouteGenie Business Systems Analyst\n",
+    "\n",
+    "\n",
+    "HEADER = {\n",
+    "  'Authorization': f'Bearer {access_token}',\n",
+    "  \"Content-Type\": \"application/x-www-form-urlencoded\"\n",
+    "}\n",
+    "\n",
+    "\n",
+    "DATA = {'grant_type': 'client_credentials'}\n",
+    "\n",
+    "request = requests.get(f\"{ENV['HOST']}open_api/api/v1/payer/\", \n",
+    "                              headers=HEADER)\n",
+    "\n",
+    "# Print out the request status and request text\n",
+    "print(f\"Payers: [{request.json()}]\")\n",
+    "# print(equest.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Get Trip Types"
    ]
   },
@@ -146,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,13 +216,14 @@
     "\n",
     "DATA = {\n",
     "    \"ride_id\": TESTID,\n",
-    "    \"client_internal_id\": 5,\n",
+    "    \"client_internal_id\": 1,\n",
     "    \"custom_trip_type\": 1,\n",
-    "    \"initial_time\": \"10/01/2024 16:30\",\n",
-    "    \"pick_up_address\":\"\",\n",
-    "    \"drop_off_address\":\"\",\n",
-    "    \"payment_method\":4,\n",
-    "    \"amount\": 153\n",
+    "    \"payer_id\": 30,\n",
+    "    \"initial_time\": \"10/01/2025 16:30\",\n",
+    "    \"pick_up_address\":\"241 Main St Buffalo NY\",\n",
+    "    \"drop_off_address\":\"490 Delaware Ave Buffalo NY\",\n",
+    "    \"payment_method\":1,\n",
+    "    \"amount\": 15\n",
     "}\n",
     "    \n",
     "HEADER = {\n",
@@ -240,15 +277,46 @@
     "\n",
     "print(f\"Query Order Response: [{queryorders.status_code}]\")\n",
     "DATA = queryorders.json()\n",
-    "print(f'---\\nSummary:\\nORDER {TESTID} - {ORDER_MODES[DATA['custom_trip_type']]} for {DATA['client']['id']} at {DATA['initial_time']}\\nfrom \"{DATA['pick_up_address']}\"\\nto \"{DATA['drop_off_address']}\"\\npaid by {PAYMENT_METHOD[DATA['fare_payment_info']['payment_method']]}')\n",
-    "print(f\"---\\nStatus: Ride status - {DATA['status']} | Payment - {PAYMENT_STATUSES[DATA['fare_payment_info']['payment_status']]}\\n---\")\n",
+    "#print(f'---\\nSummary:\\nORDER {TESTID} - {ORDER_MODES[DATA['custom_trip_type']]} for {DATA['client']['id']} at {DATA['initial_time']}\\nfrom \"{DATA['pick_up_address']}\"\\nto \"{DATA['drop_off_address']}\"\\npaid by {PAYMENT_METHOD[DATA['fare_payment_info']['payment_method']]}')\n",
+    "#print(f\"---\\nStatus: Ride status - {DATA['status']} | Payment - {PAYMENT_STATUSES[DATA['fare_payment_info']['payment_status']]}\\n---\")\n",
+    "pprint(DATA, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/usr/bin/env python\n",
+    "# -*- coding: utf-8 -*-\n",
+    "\n",
+    "### Salvatore L Greco <salvatore@isi-technology.com>\n",
+    "### ISI Technology/RouteGenie Business Systems Analyst\n",
+    "\n",
+    "HEADER = {\n",
+    "    'Authorization': f'Bearer {access_token}'\n",
+    "}\n",
+    "\n",
+    "start_date = \"10/01/2025\"\n",
+    "end_date = \"10/03/2025\"\n",
+    "query_string = f'{ENV['HOST']}open_api/api/v1/order/?start_date={start_date}&end_date={end_date}?client_id=4231'\n",
+    "\n",
+    "print(f\"Querying ORDER {TESTID}\")\n",
+    "queryorders = requests.get(query_string, \n",
+    "                           headers = HEADER)\n",
+    "\n",
+    "print(f\"Query Order Response: [{queryorders.status_code}]\")\n",
+    "DATA = queryorders.json()\n",
+    "#print(f'---\\nSummary:\\nORDER {TESTID} - {ORDER_MODES[DATA['custom_trip_type']]} for {DATA['client']['id']} at {DATA['initial_time']}\\nfrom \"{DATA['pick_up_address']}\"\\nto \"{DATA['drop_off_address']}\"\\npaid by {PAYMENT_METHOD[DATA['fare_payment_info']['payment_method']]}')\n",
+    "#print(f\"---\\nStatus: Ride status - {DATA['status']} | Payment - {PAYMENT_STATUSES[DATA['fare_payment_info']['payment_status']]}\\n---\")\n",
     "pprint(DATA, indent=4)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -262,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
